# learning_rust_web_app

hello_world/: Cargo.toml
hello_world/src/: main.rs
use_db/: Cargo.toml
use_db/src/: main.rs
use_db/src/templates/: index.hbs  user_index.hbs
use_router/: Cargo.toml
use_router/src/: main.rs
use_template/: Cargo.toml  build.rs
use_template/src/: main.rs
