[package]
name = "use_db"
version = "0.1.0"
authors = ["Pocket7878 <poketo7878@gmail.com>"]

[dependencies]
iron = "0.4.0"
router = "0.4.0"
handlebars-iron = "0.18.0"
params = "0.4.1"
r2d2 = "0.7.0"
r2d2_mysql="*"
#iron-r2d2-mysql-middleware = { git = "https://github.com/pocket7878/iron-r2d2-mysql-middleware.git" }
iron-r2d2-mysql-middleware = { path = "../../iron-r2d2-mysql-middleware/" }

[dependencies.mysql]
version = "3.0.0"
default-features = false
features = ["socket"]
